# desafio-4i

./: README.md  app.py  pyproject.toml  requirements.txt
desafio_4i/suppliers/: suppliers.py
src/: app.py  startup.py
src/controllers/: suppliers_controller.py
src/entities/: suppliers.py
src/services/: service_base.py  suppliers_service.py
tests/: test_desafio_4i.py
