[tool.poetry]
name = "desafio_4i"
version = "0.1.0"
description = "Projeto básico de API Rest "
authors = ["Wilson Santos <will-neto@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
tinydb = "^4.7.0"
flask-pydantic-spec = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
